# convolution_fun

./: .gitignore  CMakeLists.txt
headers/: compute_module.hpp  globals.hpp  png_image.hpp  png_loader.hpp
src/: compute_module.cpp  main.cpp  png_loader.cpp
